# FlowForge

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
FlowForge/: .clang-format  LICENSE
FlowForge/assets/: README.md
FlowForge/include/flowforge/sim/: AStar.h  AgentSoA.h  Config.h  SpatialGrid.h
FlowForge/include/flowforge/ui/: InputController.h
FlowForge/include/flowforge/util/: Profiler.h  Rng.h
FlowForge/src/render/: BitmapFont.cpp
FlowForge/src/sim/: AgentSoA.cpp  Metrics.cpp  SpatialGrid.cpp
FlowForge/tests/: test_spatial_grid.cpp
MemoryApp/: app.json  package-lock.json  package.json  types.ts
MemoryApp/app/: index.tsx
MemoryApp/components/: add-reminder-form.tsx  calendar-component.tsx  clock.tsx  date-card.tsx
bench/: bench_main.cpp
include/flowforge/render/: BitmapFont.h  Renderer.h
include/flowforge/sim/: FlowField.h  Grid.h  Metrics.h  Simulation.h
include/flowforge/util/: Types.h
src/: main.cpp
src/render/: Renderer.cpp
src/sim/: AStar.cpp  FlowField.cpp  Grid.cpp  Simulation.cpp
src/ui/: InputController.cpp
tests/: test_astar.cpp  test_flowfield.cpp  test_main.cpp
